<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AppGhn</string>
    <string name="text_categorias">Categorias</string>
    <string name="text_area_do_motorista">Área do Motorista</string>
    <string name="text_frota">Frota</string>
    <string name="text_gerenciamento">Gerenciamento</string>
    <string name="text_ghn_transportes">GHN Transportes</string>
    <string name="cadastro_motoristas">Cadastro Motoristas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="funcionarios">Funcionários</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="title_activity_desempenho">DesempenhoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="diretos">Diretos</string>
    <string name="indiretos">Indiretos</string>
    <string name="botao_flutuante">Botão Flutuante</string>
    <string name="exibir_certificados_ativos">Exibir certificados ativos</string>
    <string name="buscar">Buscar</string>
    <string name="editar">Editar</string>
    <string name="logout">Logout</string>
    <string name="busca_vazia">Não encontrei nada aqui.</string>
    <string name="certificado">Certificado</string>
    <string name="exibicao">Exibição</string>
    <string name="desfazer_pagamento">Desfazer pagamento</string>
    <string name="primeira_parcela">Primeira Parcela</string>
    <string name="valor_total">Valor Total</string>
    <string name="configuracoes">Configurações</string>
    <string name="administrativo">Administrativo</string>
    <string name="certificados">Certificados</string>
    <string name="demais_seguros">Demais Seguros</string>
    <string name="seguro_frota">Seguro Frota</string>
    <string name="impostos">Impostos</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="litros">Litros</string>
    <string name="media">Média</string>
    <string name="lucro">Lucro</string>
    <string name="frete_liquido">Frete Líquido</string>
    <string name="percurso">Percurso</string>
    <string name="salarios">Salários</string>
    <string name="manutencao">Manutenção</string>
    <string name="abastecimento">Abastecimento</string>
    <string name="placa">Placa</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="comissao">Comissão</string>
    <string name="editar_comissao">Editar comissão</string>
    <string name="fechar_frete">Fechar Frete</string>
    <string name="km">Km</string>
    <string name="total_pago">Total Pago</string>
    <string name="comissao_paga">Comissão Paga</string>
    <string name="visualizar_parcelas">Visualizar Parcelas</string>
    <string name="renovar_seguro">Renovar Seguro</string>
    <string name="seguro_auto">Seguro Auto</string>
    <string name="vida_grupo">Vida Grupo</string>
    <string name="voce_ja_esta_aqui">Você já está aqui!</string>
    <string name="seguro_compreensivo">Seguro Compreensivo</string>
    <string name="seguro_de_vida">Seguro de Vida</string>
    <string name="demais_ramos">Demais Ramos</string>
    <string name="calendario">calendario</string>
    <string name="nao_encontrei_nada_aqui">Não encontrei nada aqui.</string>
    <string name="carregando_dados" tools:ignore="TypographyEllipsis">Carregando Dados...</string>
    <string name="floating_action_button">Floating action Button</string>
    <string name="total_a_receber">Total a Receber</string>
    <string name="acumulado">Acumulado</string>
    <string name="j_recebido">Já recebido</string>
    <string name="n_o_encontrei_nada_aqui">Não encontrei nada aqui.</string>
    <string name="comiss_o_a_receber">Comissão a receber</string>
    <string name="reembolso">Reembolso</string>
    <string name="adiantamento">Adiantamento</string>
    <string name="frete_bruto">Frete Bruto</string>
    <string name="descontos">Descontos</string>
    <string name="abast_total">Abast. Total</string>
    <string name="litragem_total">Litragem total</string>
    <string name="despesa_total">Despesa Total</string>
    <string name="sem_reembolso">Sem reembolso</string>
    <string name="reboques">Reboques</string>
    <string name="cavalos">Cavalos</string>
    <string name="cadastra_novo">Cadastra novo</string>
    <string name="saldo">Saldo</string>
    <string name="tipo">Tipo:</string>
    <string name="resumo">Resumo</string>
    <string name="origem">Origem</string>
    <string name="destino">Destino</string>
    <string name="empresa">Empresa</string>
    <string name="carga">Carga</string>
    <string name="valores">Valores</string>
    <string name="seguro_carga">Seguro carga</string>
    <string name="outros_descontos">Outros Descontos</string>
    <string name="comissao_motorista">Comissao motorista</string>
    <string name="recebimentos">Recebimentos</string>
    <string name="adicionar">Adicionar</string>
    <string name="data">Data</string>
    <string name="n_nota">nº Nota</string>
    <string name="descricao">Descrição</string>
    <string name="exibir_rateio_desp_indiretas">Exibir rateio (Desp. Indiretas)</string>
    <string name="detalhes_do_per_odo">Detalhes do período</string>
    <string name="cavalo">Cavalo</string>
    <string name="frete">Frete</string>
    <string name="abast">Abast.</string>
    <string name="despesa">Despesa</string>
    <string name="valor">Valor</string>
    <string name="defina_o_novo_percentual">Defina o novo percentual:</string>
    <string name="percentual_comissao">Percentual comissão</string>
    <string name="qual_cavalo_deseja_vincular">À qual cavalo deseja vincular?</string>
    <string name="exibir_todos">Exibir Todos</string>
    <string name="selecionar_ano">Selecionar Ano</string>
    <string name="seta_esquerda">Seta esquerda</string>
    <string name="seta_direita">Seta direita</string>
    <string name="filtrar">filtrar</string>
    <string name="barra_horizontal">barra horizontal</string>
    <string name="ano">Ano</string>
    <string name="filtrar_placa">Filtrar placa</string>
    <string name="pagar">Pagar</string>
    <string name="defina_o_valor_do_adiantamento">Defina o valor do adiantamento:</string>
    <string name="defina_um_motorista_para_este_cavalo">Defina um motorista para este Cavalo</string>
    <string name="nome">Nome</string>
    <string name="defina_o_valor_a_ser_descontado">Defina o valor a ser descontado:</string>
    <string name="dd_mm_aa">dd/mm/aa</string>
    <string name="total_abastecimento">Total Abastecimento</string>
    <string name="total_despesas">Total Despesas</string>
    <string name="total_frete">Total Frete</string>
    <string name="ja_pago">Já Pago</string>
    <string name="total_comissao">Total comissão</string>
    <string name="em_aberto">Em aberto</string>
    <string name="fechamento">Fechamento</string>
    <string name="reembolso_plus">Reembolso ( + )</string>
    <string name="adiantamento_less">Adiantamento ( - )</string>
    <string name="liquido">Liquido</string>
    <string name="fechar_e_pagar">FECHAR E PAGAR</string>
    <string name="adiantamentos">Adiantamentos</string>
    <string name="abatido">Abatido</string>
    <string name="resta">Resta</string>
    <string name="reembolsos">Reembolsos</string>
    <string name="fretes">Fretes</string>
    <string name="voce_esta_adicionando_um_novo_registro_de_abastecimento">Você está adicionando um novo registro de abastecimento.</string>
    <string name="posto">Posto</string>
    <string name="marcacao_km">Marcação Km</string>
    <string name="quantidade_litros">Quantidade Litros</string>
    <string name="valor_litro">Valor/Litro</string>
    <string name="parcial">Parcial</string>
    <string name="total">Total</string>
    <string name="voce_esta_criando_um_novo_registro_de_adiantamento">Você está criando um novo registro de Adiantamento</string>
    <string name="cavalo_mecanico">Cavalo mecânico</string>
    <string name="voce_esta_adicionando_um_novo_registro_de_cavalo_mecanico">Você está adicionando um novo registro de Cavalo Mecanico</string>
    <string name="marca">Marca</string>
    <string name="versao">Versâo</string>
    <string name="modelo">Modelo</string>
    <string name="cor">Cor</string>
    <string name="renavam">Renavam</string>
    <string name="chassi">Chassi</string>
    <string name="comiss_o_ao_motorista" tools:ignore="StringFormatInvalid">Comissão % ao motorista</string>
    <string name="voce_esat_adicionando_um_novo_registro_de_certificado">Você está adicionando um novo registro de Certificado</string>
    <string name="data_expediao">Data Expedição</string>
    <string name="ano_referencia">Ano Referência</string>
    <string name="numero">Número</string>
    <string name="data_vencimento">Data Vencimento</string>
    <string name="voce_esta_adicionando_um_novo_registro_de_manutencao">Você está adicionando um novo registro de Manutenção</string>
    <string name="periodica">Periódica</string>
    <string name="extraordinaria">Extraordinaria</string>
    <string name="voce_esta_adicionando_um_novo_registro_de_despesa">Você está adicionando um novo registro de Despesa</string>
    <string name="valor_despesa">Valor Despesa</string>
    <string name="nao_preciso_de_reembolso">Não preciso de reembolso.</string>
    <string name="sim_preciso_ser_reembolsado">Sim, preciso ser reembolsado.</string>
    <string name="despesas">Despesas</string>
    <string name="ref_cavalo">Ref. Cavalo</string>
    <string name="voce_esta_criando_um_novo_registro_de_frete">Você está criando um novo registro de Frete</string>
    <string name="peso">Peso</string>
    <string name="seguro_de_carga">Seguro de Carga</string>
    <string name="voce_esta_adicionando_um_novo_registro_de_imposto">Você está adicionando um novo registro de Imposto</string>
    <string name="imposto">Imposto</string>
    <string name="referencia">Referência</string>
    <string name="motorista">Motorista</string>
    <string name="voce_esta_adicionando_um_novo_motorista">Você está adicionando um novo Motorista</string>
    <string name="informacoes_pessoais">Informações pessoais</string>
    <string name="cpf">CPF</string>
    <string name="cnh">CNH</string>
    <string name="validade">Validade</string>
    <string name="contratacao">Contratação</string>
    <string name="salario_base">Salário-Base</string>
    <string name="recebimento">Recebimento</string>
    <string name="voce_esta_criando_um_novo_registro_de_recebimento">Você está criando um novo registro de Recebimento</string>
    <string name="resta_receber">Resta Receber:</string>
    <string name="tipo_de_recebimento">Tipo de Recebimento</string>
    <string name="detalhes">Detalhes</string>
    <string name="lucro_perc">Lucro %</string>
    <string name="data_inicial">Data Inicial</string>
    <string name="data_final">Data Final</string>
    <string name="km_rodado">Km rodado</string>
    <string name="total_litros">Total litros</string>
    <string name="custos_percurso">Custos percurso</string>
    <string name="apagar">Apagar</string>
    <string name="salvar">Salvar</string>
    <string name="bomba_combustivel">Bomba combustível</string>
    <string name="imagem_caminhao">Imagem caminhão</string>
    <string name="icone_fechar">icone fechar</string>
    <string name="imagem_dinheiro">imagem dinheiro</string>
    <string name="maleta_manutencao">maleta manutencao</string>
</resources>