<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_padrao_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/buscar"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_padrao_editar"
        android:icon="@drawable/ic_baseline_mode_edit_24"
        android:title="@string/editar"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/menu_padrao_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="always" />

</menu>