<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/menu_formulario_apagar"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/apagar"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"/>

    <item
        android:id="@+id/menu_formulario_editar"
        android:icon="@drawable/ic_baseline_mode_edit_24"
        android:title="@string/editar"
        app:showAsAction="always"
        android:iconTint="@color/white"/>

    <item
        android:id="@+id/menu_formulario_salvar"
        android:icon="@drawable/ic_baseline_done_24"
        app:showAsAction="always"
        android:title="@string/salvar"
        android:iconTint="@color/white"/>

</menu>