<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog"
    android:backgroundTint="@color/midnightblue"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"
        android:src="@drawable/horizontal"
        app:tint="@color/white"
        android:contentDescription="@string/barra_horizontal" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalhes"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_cancel_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/icone_fechar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="24sp"
            android:textColor="@android:color/holo_green_light"
            tools:text="@tools:sample/us_zipcodes"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lucro_perc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/percentual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="24sp"
            android:textColor="@android:color/holo_green_light"
            tools:text="@tools:sample/us_zipcodes"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#A2A2A2"
        android:layout_marginVertical="4dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_flag1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/data_inicial"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/data_flag1"
            app:layout_constraintWidth_percent="0.30"/>

        <TextView
            android:id="@+id/data_flag1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/km_flag1"
            app:layout_constraintStart_toEndOf="@id/txt_flag1"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/date/ddmmyy" />

        <TextView
            android:id="@+id/km_flag1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/data_flag1"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/us_zipcodes" />

        <TextView
            android:id="@+id/txt_flag2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/data_final"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_flag1"
            app:layout_constraintEnd_toStartOf="@id/data_flag2"
            app:layout_constraintWidth_percent="0.30"/>

        <TextView
            android:id="@+id/data_flag2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/txt_flag2"
            app:layout_constraintEnd_toStartOf="@id/km_flag2"
            app:layout_constraintStart_toEndOf="@id/txt_flag2"
            app:layout_constraintTop_toTopOf="@id/txt_flag2"
            tools:text="@tools:sample/date/ddmmyy" />

        <TextView
            android:id="@+id/km_flag2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/txt_flag2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/data_flag2"
            app:layout_constraintTop_toTopOf="@id/txt_flag2"
            tools:text="@tools:sample/us_zipcodes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#A2A2A2"
        android:layout_marginVertical="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/km_rodado"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/km_rodado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            tools:text="@tools:sample/us_zipcodes"
            android:gravity="end"
            android:layout_weight="1"
            android:layout_gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_litros"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/total_litros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            tools:text="@tools:sample/us_zipcodes"
            android:gravity="end"
            android:layout_weight="1"
            android:layout_gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/frete_bruto"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/frete_bruto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            tools:text="@tools:sample/us_zipcodes"
            android:gravity="end"
            android:layout_weight="1"
            android:layout_gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/abastecimento"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/abastecimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            tools:text="@tools:sample/us_zipcodes"
            android:gravity="end"
            android:layout_weight="1"
            android:layout_gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comissao"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/comissao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            tools:text="@tools:sample/us_zipcodes"
            android:gravity="end"
            android:layout_weight="1"
            android:layout_gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/custos_percurso"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/custos_percurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            tools:text="@tools:sample/us_zipcodes"
            android:gravity="end"
            android:layout_weight="1"
            android:layout_gravity="end"/>
    </LinearLayout>




</LinearLayout>