<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/midnightblue"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/percurso_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry,UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_frete"
                android:contentDescription="@string/imagem_caminhao" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/percurso" />

        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/percurso_layout"
            android:background="#656464"/>

        <LinearLayout
            android:id="@+id/salarios_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            app:layout_constraintTop_toBottomOf="@id/percurso_layout"
            app:layout_constraintStart_toStartOf="@id/percurso_layout"
            app:layout_constraintEnd_toEndOf="@id/percurso_layout"
            tools:ignore="RtlSymmetry,UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_attach_money_24"
                android:contentDescription="@string/imagem_dinheiro" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/salarios" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/salarios_layout"
            android:background="#656464"/>

        <LinearLayout
            android:id="@+id/manutencao_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            app:layout_constraintTop_toBottomOf="@id/salarios_layout"
            app:layout_constraintStart_toStartOf="@id/salarios_layout"
            app:layout_constraintEnd_toEndOf="@id/salarios_layout"
            tools:ignore="RtlSymmetry,UseCompoundDrawables">

            <ImageView
                android:id="@+id/lucro_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_vector_repair"
                android:contentDescription="@string/maleta_manutencao" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/manutencao" />

        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/manutencao_layout"
            android:background="#656464"/>

        <LinearLayout
            android:id="@+id/abastecimento_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            app:layout_constraintTop_toBottomOf="@id/manutencao_layout"
            app:layout_constraintStart_toStartOf="@id/manutencao_layout"
            app:layout_constraintEnd_toEndOf="@id/manutencao_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="RtlSymmetry,UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_abastecimento"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/bomba_combustivel" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/abastecimento" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>